crates/rome_js_formatter/tests/specs/prettier/js/decorator-auto-accessors/with-semicolon-1.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: with-semicolon-1.js
---
# Input
```js
class C {
  accessor clicked = "value";
  [foo]() {}
}
  
```

# Output
```js
class C {
  accessor;
  clicked = "value";
  [foo]() {}
}

```

# Errors
```
error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ with-semicolon-1.js:2:3
  │
2 │   accessor clicked = "value";
  │   ^^^^^^^^


```


